[tool.poetry]
name = "graner"
version = "0.1.0"
description = "API to feed the garden"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.2"}
graphene = "^2.1.8"
tartiflette-asgi = "^0.9.0"
sqlalchemy = "^1.3.22"
sqlalchemy-utils = "^0.36.8"
loguru = "^0.5.3"
pretty-errors = "^1.2.19"
marshmallow = "^3.10.0"
marshmallow-sqlalchemy = "^0.24.1"
pytest = "^6.2.1"
coverage = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
